k8s/api/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aurum-api
  labels:
    app.kubernetes.io/name: aurum-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: aurum
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`api.aurum.localtest.me`)
      kind: Rule
      middlewares:
        - name: oidc-forward-auth
      services:
        - name: aurum-api
          port: 8080
